WIP: Add file sync

--- a/docker/main/Dockerfile
+++ b/docker/main/Dockerfile
@@ -7,6 +7,10 @@ FROM nvcr.io/nvidia/pytorch:21.08-py3
 ENV PYTHONDONTWRITEBYTECODE 1
 ENV PYTHONUNBUFFERED 1
 
+# Set up code directory
+RUN mkdir code
+WORKDIR /workspace/code
+
 # Install a few dependencies
 RUN apt update
 RUN DEBIAN_FRONTEND=noninteractive TZ=Etc/UTC apt-get -y install -y tzdata imagemagick
@@ -14,10 +18,6 @@ RUN DEBIAN_FRONTEND=noninteractive TZ=Etc/UTC apt-get -y install -y tzdata image
 # Create a disco user
 RUN useradd -ms /bin/bash disco
 USER disco
-
-# Set up code directory
-RUN mkdir code
-WORKDIR /workspace/code
 
 # Copy over models used
 COPY --from=modelprep /scratch/models /workspace/code/models
@@ -35,10 +35,14 @@ RUN git clone https://github.com/openai/CLIP && \
     git clone https://github.com/crowsonkb/guided-diffusion.git && \
     git clone https://github.com/shariqfarooq123/AdaBins.git
 
+USER root
+RUN apt-get -y install awscli
+USER disco
+
 # Install Python packages
 RUN pip install imageio imageio-ffmpeg==0.4.4 pyspng==0.1.0 lpips datetime timm ipywidgets omegaconf>=2.0.0 pytorch-lightning>=1.0.8 torch-fidelity einops wandb pandas ftfy
 RUN pip install omegaconf hydra-core
-RUN sudo apt install s3fs
+RUN pip install boto3
 
 # Copy default settings file
 COPY config/defaults.yaml config/
