--- a/config/defaults.yaml
+++ b/config/defaults.yaml
@@ -1,6 +1,7 @@
 hydra:
   run:
     dir: "."
+s3_root_path: "generated-art"
 skip_for_run_all: True
 simple_nvidia_smi_display: False
 google_drive: True
